[gd_scene load_steps=10 format=2]

[ext_resource path="res://interaction/door/key.gd" type="Script" id=1]
[ext_resource path="res://art/spark_particle2.png" type="Texture" id=2]
[ext_resource path="res://art/key1.png" type="Texture" id=3]
[ext_resource path="res://sound/event2.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=1]
min_value = 1.0
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 0.909804, 0.707965, 0.831858, 0 )

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[sub_resource type="Curve" id=4]
min_value = 1.0
max_value = 2.0
_data = [ Vector2( 0, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 1, 0.909804, 0.707965, 0.831858, 0 )

[node name="key" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="normal_shine" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 16, 16 )
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 50.0
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -14.5975, -10.7368, -14.5975, -21.4687, -4.7241, -30.6982, 5.36393, -30.6982, 15.0227, -19.537, 3.43218, 29.6153, -13.7389, 30.0446 )

[node name="monitor" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="monitor"]
visible = false
shape = SubResource( 3 )

[node name="gotkey_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="death" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="enabler" type="Timer" parent="."]
one_shot = true

[node name="shine" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 2.0
one_shot = true
explosiveness = 0.95
local_coords = false
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 140.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="sp" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="monitor" to="." method="_on_body_enter"]
[connection signal="timeout" from="death" to="." method="_on_timeout"]
[connection signal="timeout" from="enabler" to="." method="_on_timeout_enable"]
[connection signal="screen_entered" from="sp" to="." method="_on_enter_screen"]
[connection signal="screen_exited" from="sp" to="." method="_on_exit_screen"]
